src/crode/test/invalid/invalidDrawNumber.crode
canvas "invalidDrawNumber" width 800 height 600 {
  let x = 100

  draw x at (100, 100)
}
